fix z-index problem at contents and header-alarm

--- a/public/assets/header.css
+++ b/public/assets/header.css
@@ -143,7 +143,6 @@
 /* profile*/
 .dropdown {
   position: relative;
-  z-index: 50;
   top: 0;
 }
 
@@ -156,6 +155,7 @@
 .fa-user:before {
   font-size: xx-large;
   color: #3a3b45;
+  background-color: #f5f5f5;
 }
 
 /* header_btn-icon*/
@@ -327,5 +327,4 @@ input.profile_input:not(:last-child) {
 .header-bell__icon {
   border: 0;
 }
-
 /*///////////right-header////////////*/
